reworked daemon output and status handling
for better compatibility with newer android versions